# EigenRecursive

./: .gitignore  CMakeLists.txt  EigenRecursiveConfig.cmake  LICENSE  README.md
cmake/: EigenRecursiveConfig.cmake  FindEigenRecursive.cmake  sample_macros.cmake
include/: CMakeLists.txt
include/EigenRecursive/: All.h  CMakeLists.txt  Mixed.h
include/EigenRecursive/Cholesky/: CG.h  Cholesky.h  RecursiveSimplicialCholesky2.h  SparseCholesky.h
include/EigenRecursive/Core/: DenseMV.h  ForwardBackwardSubs.h  ForwardBackwardSubs_Sparse.h  MatrixScalar.h  ParallelHelper.h  SparseInnerProduct.h  SparseTranspose.h
include/EigenRecursive/Mixed/: MixedSolverSchur.h  MixedSolverSchurMP.h  MixedSolverSparse.h
samples/: CMakeLists.txt
samples/bundleAdjustment/: BAPosePoint.h  BARecursive.cpp  BARecursive.h  CMakeLists.txt  Scene.cpp  Scene.h  ba_main.cpp
samples/denseBenchmark/: denseBenchmark_main.cpp
samples/denseOperators/: denseOperators_main.cpp
samples/helloRecursion/: CMakeLists.txt  helloRecursion_main.cpp  spmv_main.cpp
samples/sb_benchmark/: mkl_benchmark_mm.hpp  mkl_benchmark_mv.hpp  mkl_mm.cpp  mkl_mv.cpp  sparse_block_benchmark.h  sparse_block_benchmark_main.cpp
samples/sb_benchmark/saiga/: TimerBase.h  helper.h  mkl_helper.h  performanceMeasure.h  statistics.h
samples/sparseOperators/: sparseOperators_main.cpp
samples/spmv/: CMakeLists.txt  spmv_main.cpp
